--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-    "qiwi": "79176085437",
+    "qiwi": ["79176085437", "79118679109", "79643654982", "79918867108"],
     "percent": 0.032,
     "admins": ["depols"],
     "check": "madoka"
