--- a/settings.json
+++ b/settings.json
@@ -2,5 +2,6 @@
     "qiwi": ["79176085437", "79118679109", "79643654982", "79918867108"],
     "percent": 0.032,
     "admins": ["depols"],
+    "notification": 410719021,
     "check": "madoka"
 }
