--- a/settings.json
+++ b/settings.json
@@ -4,7 +4,7 @@
     "admins": ["depols"],
     "notification": 410719021,
     "notif_settings": {
-        "checks": true,
+        "checks": false,
         "transactions": true
     },
     "check": "madoka"
