--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-    "qiwi": ["79773400162", "79176085437", "79918867108"],
+    "qiwi": ["79176085437", "79918867108"],
     "percent": 0.033,
     "admins": ["depols"],
     "notification": 410719021,
