--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-    "qiwi": ["79316111676", "79176085437"],
+    "qiwi": ["79316111676"],
     "percent": 0.033,
     "admins": ["depols"],
     "notification": 410719021,
